[package]
name = "rust-scrapper"
version = "1.0.0"
description = "This library provides easy-to-use, efficient scraping tools for developers. "
authors = ["Oğuzhan ÇART <oguzhancart1@gmail.com>"]
repository = "https://github.com/oguzhan18/rust-scrapper"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.13"
tokio = { version = "1", features = ["full"] }
log = "0.4"
headless_chrome = "0.6.0"
serde_json = "1.0"
cron = "0.12.0"
chrono = "0.4"
